# IOC-Scanner-Lite

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/screenshots/: README.md
examples/: iocs.json  iocs.txt
src/ioc_scanner_lite/: api.py  cli.py  scanner.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  styles.css
