[project]
name = "ioc-scanner-lite"
version = "0.1.0"
description = "Scan files and logs against IOC lists and generate reports."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
ioc-scanner-lite = "ioc_scanner_lite.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
